# RayTrace

./: .gitignore  CMakeLists.txt  main.cpp  main.hpp
h/: Camera.hpp  Hittable.hpp  Ray.hpp  Scene.hpp  Window.hpp
h/Materials/: Diffuse.hpp  Material.hpp  Metal.hpp
h/Render/: PixelCluster.hpp  Render.hpp
h/Utils/: Color.hpp  Pair.hpp  RandomReal.hpp  SafeQueue.hpp
include/h/: Camera.hpp  Dimentions.hpp  Hittable.hpp  PixelCluster.hpp  Ray.hpp  Render.hpp  Scene.hpp  Sphere.hpp  Window.hpp
include/h/Materials/: Dielectric.hpp  Diffuse.hpp  Material.hpp  Metal.hpp
include/h/Render/: PixelCluster.hpp  Render.hpp
include/h/Utils/: Color.hpp  RandomReal.hpp  SafeQueue.hpp
src/: Camera.cpp  Ray.cpp  Render.cpp  Scene.cpp  Sphere.cpp  Window.cpp
src/Materials/: Dielectric.cpp  Diffuse.cpp  Metal.cpp
src/Render/: Render.cpp
src/Utils/: Color.cpp  RandomReal.cpp
test/: CMakeLists.txt  TestDev.cpp
test/Utils/: TestColor.cpp  TestSafeQueue.cpp
